# golden-gate

./: .deepsource.toml  .gitignore  .gitmodules  404.html  Brewfile  Cartfile  Cartfile.private  Cartfile.resolved  Dockerfile  LICENSE  NOTICE  OWNERS  README.md  environment.yml  faq.html  getting_started.html  glossary.html  index.html  introduction.html  license.html  release_notes.html  sample.html  sitemap.xml  sonar-project.properties
xp/: CMakeLists.txt  CMakeSettings.json
xp/annotations/: CMakeLists.txt  gg_annotations.h
xp/apps/coap-client/: CMakeLists.txt  gg_coap_client.c
xp/apps/coap-server/: CMakeLists.txt  gg_coap_server.c
xp/apps/stack-tool/: CMakeLists.txt  README.md  gg_stack_tool.c  gg_stack_tool_core_bluetooth_transport.h  gg_stack_tool_core_bluetooth_transport.m  gg_stack_tool_macos_tunnel.c  gg_stack_tool_macos_tunnel.h
xp/bundle/: CMakeLists.txt  Info.plist  add_fat_library.cmake  gg.c  module.modulemap
xp/coap/: CMakeLists.txt  gg_coap.c  gg_coap.h  gg_coap_blockwise.c  gg_coap_blockwise.h  gg_coap_endpoint.c  gg_coap_endpoint.h  gg_coap_filters.c  gg_coap_filters.h  gg_coap_helper.h  gg_coap_message.c  gg_coap_message.h
xp/coap/handlers/: CMakeLists.txt  gg_coap_helloworld_handler.c  gg_coap_helloworld_handler.h  gg_coap_splitter.c  gg_coap_splitter.h
xp/common/: CMakeLists.txt  gg_bitstream.c  gg_bitstream.h  gg_buffer.c  gg_buffer.h  gg_common.c  gg_common.h  gg_crc32.c  gg_crc32.h  gg_event_dispatcher.c  gg_event_dispatcher.h  gg_events.c  gg_events.h  gg_inspect.c  gg_inspect.h  gg_io.c  gg_io.h  gg_lists.h  gg_logging.c  gg_logging.h  gg_memory.c  gg_memory.h  gg_port.h  gg_queues.h  gg_results.h  gg_ring_buffer.c  gg_ring_buffer.h  gg_strings.c  gg_strings.h  gg_system.h  gg_threads.c  gg_threads.h  gg_timer.c  gg_timer.h  gg_types.c  gg_types.h  gg_utils.c  gg_utils.h  gg_version.c  gg_version.h  (+1 more)
xp/config/profiles/: atlas_a7.cmake  bison.cmake  esp32.cmake  iOS.cmake  iOS_macOS.cmake  linux.cmake  macOS.cmake  macOS_cmdline.cmake  wasm.cmake  windows.cmake
xp/config/toolchains/: gcc_arm.cmake  gcc_arm_nuttx.cmake  iOS.cmake  mynewt.cmake
xp/diagnostics/: CMakeLists.txt  gg_diagnostics_ram_storage.c  gg_diagnostics_ram_storage.h
xp/docs/: CMakeLists.txt  Doxyfile.in
xp/examples/coap/: CMakeLists.txt  coap_blockwise_example.c  coap_splitter_example.c
xp/examples/dtls/: CMakeLists.txt  dtls_example.c
xp/examples/gattlink/: CMakeLists.txt  gattlink_blast_over_udp.c
xp/examples/inspect/: CMakeLists.txt  inspect_example.c
xp/examples/interfaces/: CMakeLists.txt  gg_interfaces_example.c  gg_interfaces_trap_example.c
xp/examples/logging/: CMakeLists.txt  gg_logging_example.c  gg_logging_example.h  gg_logging_example_lib.c  gg_logging_example_lib2.c
xp/examples/loop/: CMakeLists.txt  data_sink_listener_proxy_example.c  data_sink_proxy_example.c  invoke_example.c  multithread_loop_example.c  timers_loop_example.c  wasm_loop_example.c  wasm_loop_example_shell.html
xp/examples/remote/: CMakeLists.txt  remote_shell_over_udp_example.c
xp/examples/service_host/: CMakeLists.txt  README.md  cbor.js  remote_api_script_example.py  remote_api_shell_example.html  service_host_example.c  service_host_proxy.py
xp/examples/sockets/: CMakeLists.txt  lwip_sockets.c  udp_blast.c  udp_echo_server.c  udp_lwip_over_bsd_blast.c  udp_nip_over_bsd_blast.c
xp/examples/stack/: CMakeLists.txt  README.md  multi_stack_example.c
xp/examples/web_bluetooth/: CMakeLists.txt  README.rst  web_bluetooth_bindings.js  web_bluetooth_example.c  web_bluetooth_example_shell.html
xp/fuzzing/: CMakeLists.txt
xp/fuzzing/coap/: CMakeLists.txt  coap_extended_error_fuzzer.c  coap_parser_fuzzer.c
xp/fuzzing/gattlink/: CMakeLists.txt  gattlink_protocol_fuzzer.c
xp/fuzzing/smo/: CMakeLists.txt  smo_cbor_parser_fuzzer.c
xp/gattlink/: CMakeLists.txt  gg_gattlink.c  gg_gattlink.h  gg_gattlink_generic_client.c  gg_gattlink_generic_client.h
xp/loop/: CMakeLists.txt  gg_loop.c  gg_loop.h  gg_loop_base.c  gg_loop_base.h
xp/loop/extensions/: gg_loop_fd.h
xp/lwip/: CMakeLists.txt  gg_lwip.c  gg_lwip_generic_netif.c  gg_lwip_generic_netif.h  lwipopts.h.in
xp/mbedtls/: CMakeLists.txt  gg_mbedtls.c
xp/mbedtls/configs/: config_mynewt.h  gg_dtls_default_config.h  gg_dtls_default_config_v3.h  gg_dtls_esp32_config.h  gg_dtls_morgan_config.h  gg_dtls_mynewt_config.h  gg_dtls_nuttx_config.h
xp/module/: CMakeLists.txt  gg_module.c  gg_module.h
xp/nanopb/: CMakeLists.txt
xp/netif/nuttx/: CMakeLists.txt  gg_nuttx_generic_netif.c  gg_nuttx_generic_netif.h
xp/nip/: CMakeLists.txt  gg_nip.c  gg_nip.h
xp/protocol-spec/: CMakeLists.txt
xp/protocols/: CMakeLists.txt  gg_ipv4_protocol.c  gg_ipv4_protocol.h  gg_protocols.c  gg_protocols.h
xp/remote/: CMakeLists.txt  gg_remote.c  gg_remote.h
xp/services/blast/: CMakeLists.txt  gg_blast_service.c  gg_blast_service.h
xp/services/coap_client/: CMakeLists.txt  gg_coap_client_service.c  gg_coap_client_service.h
xp/services/diagnostics/: CMakeLists.txt  gg_ram_storage_service.c  gg_ram_storage_service.h
xp/services/stack/: CMakeLists.txt  gg_stack_service.c  gg_stack_service.h
xp/services/test_server/: CMakeLists.txt  gg_coap_test_service.c  gg_coap_test_service.h  gg_coap_test_service_private.c  gg_coap_test_service_private.h
xp/smo/: CMakeLists.txt  gg_smo_allocator.c  gg_smo_allocator.h
xp/sockets/: CMakeLists.txt  gg_sockets.c  gg_sockets.h
xp/stack_builder/: CMakeLists.txt  gg_stack_builder.c  gg_stack_builder.h  gg_stack_builder_base.h
xp/tinydtls/: CMakeLists.txt
xp/tls/: CMakeLists.txt  gg_tls.c  gg_tls.h
xp/unit_tests/: CMakeLists.txt  test_runner.cpp
xp/utils/: CMakeLists.txt  gg_activity_data_monitor.c  gg_activity_data_monitor.h  gg_async_pipe.c  gg_async_pipe.h  gg_blaster_data_source.c  gg_blaster_data_source.h  gg_coap_event_emitter.c  gg_coap_event_emitter.h  gg_data_probe.c  gg_data_probe.h  gg_memory_data_sink.c  gg_memory_data_sink.h  gg_memory_data_source.c  gg_memory_data_source.h  gg_perf_data_sink.c  gg_perf_data_sink.h  gg_print_data_sink.c  gg_print_data_sink.h
(+3268 files in other folders)
